<resources>
    <string name="app_name">CorPool</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_create_trip">Criar viagem</string>
    <string name="title_view_trips">Caronas\n</string>
    <string name="your_trips">Viagens</string>
    <string name="tv_create">Criar viagem</string>
    <string name="et_destiny">Digite o endereço</string>
    <string name="tv_price">Preço:</string>
    <string name="et_price">100.00</string>
    <string name="btn_create_trip">Criar viagem</string>
    <string name="tv_trip_date">Data saida:</string>
    <string name="tv_trip_date_time">Hora saída:</string>
    <string name="btn_select_date_time">DEFINIR</string>
    <string name="empty_data">...</string>
    <string name="search_trips">Buscar</string>
    <string name="et_search_hint">Digite para onde deseja ir</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">SAIR</string>
    <string name="title_user">Conta</string>
    <string name="next">PRÓXIMO</string>
    <string name="cancel">CANCELAR</string>
    <string name="back">VOLTAR</string>
    <string name="create">CRIAR</string>
</resources>