<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="55dp"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_launcher_round" />


    <TextView
        android:id="@+id/profileViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/profileViewEmail"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:gravity="center"
        android:text="@string/logout"
        android:textSize="18sp" />


</LinearLayout>