<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.noobs.corpool.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_create_trip"
        android:name="br.com.noobs.corpool.ui.trip.create.CreateTripFragment"
        android:label="@string/title_create_trip"
        tools:layout="@layout/fragment_create_trip">
        <action
            android:id="@+id/action_navigation_create_trip_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view_trips"
        android:name="br.com.noobs.corpool.ui.trip.view.ViewTripFragment"
        android:label="@string/title_view_trips"
        tools:layout="@layout/fragment_view_trip" >
        <action
            android:id="@+id/action_navigation_view_trips_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="br.com.noobs.corpool.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>